--- a/untitled.ui
+++ b/untitled.ui
@@ -22,8 +22,12 @@
      <height>46</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(85, 170, 255);
+color: rgb(85, 255, 255);</string>
+   </property>
    <property name="text">
-    <string>确定</string>
+    <string>OK</string>
    </property>
   </widget>
   <widget class="QScrollArea" name="scrollArea">
