--- a/untitled1.ui
+++ b/untitled1.ui
@@ -75,7 +75,7 @@ color: rgb(202, 202, 202);</string>
      <number>1</number>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;脑电处理&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt; font-weight:600; font-style:italic;&quot;&gt;EEG&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="scaledContents">
      <bool>false</bool>
@@ -151,7 +151,7 @@ gridline-color: rgb(0, 0, 0);
    </column>
    <item row="0" column="0">
     <property name="text">
-     <string>信息栏</string>
+     <string>Message</string>
     </property>
     <property name="font">
      <font>
@@ -163,18 +163,19 @@ gridline-color: rgb(0, 0, 0);
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>1280</x>
+     <x>1350</x>
      <y>100</y>
      <width>161</width>
      <height>80</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(239, 237, 255);
+    <string notr="true">background-color: #F5FFFA;
 color: rgb(0, 0, 0);</string>
    </property>
    <property name="text">
-    <string>取消此次连线</string>
+    <string>Cancel this
+connection</string>
    </property>
   </widget>
  </widget>
