--- a/untitled10.ui
+++ b/untitled10.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: #98BAB0;</string>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -27,12 +30,15 @@
         </font>
        </property>
        <property name="text">
-        <string>读取</string>
+        <string>read</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QScrollArea" name="scrollArea">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 255, 255);</string>
+       </property>
        <property name="widgetResizable">
         <bool>true</bool>
        </property>
@@ -40,7 +46,7 @@
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>-834</y>
+          <y>0</y>
           <width>319</width>
           <height>2500</height>
          </rect>
@@ -77,7 +83,7 @@
         </font>
        </property>
        <property name="text">
-        <string>确定</string>
+        <string>OK</string>
        </property>
       </widget>
      </item>
